--- a/css/hulostyle.css
+++ b/css/hulostyle.css
@@ -16,10 +16,10 @@ a {
     text-decoration: none;
     font-size: 30px;
 }
-/*img {
+img {
     width: 350px;
     height: 450px;
-}*/
+}
 
 #htmlimg {
     width: 350px;
